# Swip

./: .gitignore  README  deploy.py  swip_deploy.py  test  todo.txt
Alignment-Tools/: .classpath  .gitignore  .project  build.xml  run.bat
Alignment-Tools/lib/: align.pom  alignsvc.pom  ontowrap.pom  procalign.pom
ComplexMapping/: .classpath  .project  strange.txt
ComplexXML/: .classpath  .project
ComplexXML/pattern/: CAT.xml  CAV_negative.xml  CAV_positive.xml  ICAT.xml  IP.xml
ComplexXML/res/: anti.txt  complexSchema.xsd  file_properties.xml  ignore.txt  lila.properties
NlToPivot/: build.xml  catalog.xml
NlToPivot/bonsai/: explicationDuFormat.txt  query  query0  query0.inmalt  query0.outmalt~  query2  query2.outmalt  query3.outmalt  query4  query4.inmalt
NlToPivot/bonsai/melt-0.6/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac
NlToPivot/bonsai/melt-0.6/data/: Makefile  Makefile.am  Makefile.in
NlToPivot/bonsai/melt-0.6/data/fr/: bias_weights.npy  feature_map.json
NlToPivot/bonsai/melt-0.6/src/: Makefile  Makefile.am  Makefile.in
NlToPivot/bonsai/melt-0.6/src/melt/: Makefile  Makefile.am  Makefile.in  __init__.py  __init__.py.in  classifier.py.in  corpus_reader.py  instance.py  mytoken.py.in  pos_tag.py  pos_tagger.py.in  result_sink.py  sentence.py.in  utils.py
NlToPivot/bonsai/melt-0.6/sxpipe-light/: Makefile  Makefile.am  Makefile.in  caponlysentences.pl  gl_email.pl  gl_entities.pl  gl_format.pl  gl_mtponct.pl  gl_number.pl  gl_numtruc.pl  gl_smiley.pl  gl_url.pl  lingpipe  normalize_blanks.pl  pctabr  rebuild_easy_tags.pl  remove_inner_ne.pl  segmenteur.pl  sxpipe-light  sxpipe-light.conf  sxpipe-light.conf.in  tag_meta.pl
NlToPivot/nbproject/: build-impl.xml  genfiles.properties  jax-ws.xml  jaxws-build.xml  project.properties  project.xml  rest-build.xml
NlToPivot/web/: index.jsp
NlToPivotGatePipeline/: build.xml
NlToPivotGatePipeline/nbproject/: build-impl.xml  genfiles.properties  jax-ws.xml  jaxws-build.xml  project.properties  project.xml
NlToPivotGazetteer/: build.xml
NlToPivotMaltLearn/: NivreEager-learn.xml~  conllx-learn.xml  conllx-learn.xml~  engmalt.linear-1.7.mco  engmalt.poly-1.7.mco  learn.sh  learn.sh~  musicbrainz-train-answers.xml  myconllx.xml  myconllx.xml~  qaldToTreeTaggerFormat.py  testWs.py  trained_model.mco
NlToPivotParser/: build.xml  musicbrainz-train.xml  translateAllQueries.py  translateAllQueries_tomcatLogs  translateAllQueries_tomcatLogs5
NlToPivotRules/: build.xml
NlToPivotStanford/: build.xml  translateAllQueries_tomcatLogs2  translateAllQueries_tomcatLogs3  translateAllQueries_tomcatLogs4
Patterns/: build.xml
PivotToMappings/: build.xml
PivotToMappingsSparql/: build.xml
SwipExchangeClasses/: build.xml
SwipTest/: applyGazetteer.py  dbpedia-test.xml  executeSparqlQueries.py  musicbrainz-test-gaz.xml  musicbrainz-test-piv.xml  musicbrainz-test.xml  nlToPivot.py  pivotToMappings.py  pivotToMappingsQald2.sh  translateToPivot.py
SwipUtils/: build.xml
SwipWebClient/: SwipWebClient.tar  app.js  build.xml  index.html  index.html~  mirail.html  patternsTextToRdf.html  patternsTextToRdf.html~  response.json  style.css  test.json  test_soap.html  test_soap.js
SwipWebClientSparql/: cacheManagement.html  describeDBpedia.html  describeMusicbrainz.html  fresnel-mapping.n3  fresnel-mo-album.n3  fresnel2html.xsl  idées.txt  index-fresnel.html  index-rdfBrowser.html  index.html  patternViewer.html  queryDBpedia.html  typeProperties.html  usefulMatchings.html  welcome.html
SwipWorkflow/: build.xml  catalog.xml
doc/: commandesUtiles.txt  howToDeployNlToPivotGazetteer.txt  howToDeployNlToPivotParser.txt  howToDeployNlToPivotParser.txt.save  howToInstallFuseki.txt  howToInstallJdk.txt  howToInstallSwip.txt  howToInstallTomcat.txt  howToInstallTomcat.txt.save
(+4398 files in other folders)
